# pulse-simulator

./: .gitignore  pyproject.toml
notebooks/: 01_development.ipynb  02_scheduling_moments.ipynb  02_two-qubit-test.ipynb  03_simulating_moments.ipynb  04_using_custom_pulses.ipynb  05_testing_pulses.ipynb  05_two-qubit-test.ipynb
pico-pulses/: 01_script.jl  01_single_qubit_block.ipynb  01_single_qubit_pair.ipynb  02_single_qubit_block.ipynb  03_single_qubit_block_fixed_duration copy.ipynb  03_single_qubit_block_fixed_duration.ipynb  04_two_qubit_robust.ipynb  05_test_pulse_integrals.ipynb  06_test_prev_solution.ipynb  Manifest.toml  Project.toml
pico-pulses/saved-pulses-2023-12-05/: README.md  a_single_qubit_gateset_R1e-3.csv  a_single_qubit_gateset_default.csv
pico-pulses/saved-pulses-2023-12-12/: a_single_qubit_gateset_R1e-3.csv  a_single_qubit_gateset_R1e-6.csv
pico-pulses/saved-pulses-2023-12-13/: a_single_qubit_gateset_R1e-1.csv  a_single_qubit_gateset_R1e-2.csv  a_single_qubit_gateset_R1e-3.csv  a_single_qubit_gateset_R1e-6.csv  a_single_qubit_gateset_default.csv
pico-pulses/saved-pulses-2023-12-17/: README.md  a_two_qubit_default.csv  a_two_qubit_robust.csv
pico-pulses/saved-pulses-23-12-05/: a_single_qubit_gateset_R1e-6.csv
pulse_simulator/: __init__.py  hilbert_space_labels.py  one_qubit_models.py  plot_utils.py  qiskit_backend_utils.py  qiskit_operator_labels.py  qiskit_simulation_utils.py  simulator.py  test.py  two_qubit_models.py
pulse_simulator/compiler/: __init__.py  pulse_builder.py  scheduler.py
pulse_simulator/compiler/passes/: __init__.py  (+7 more)
