[tool.poetry]
name = "pulse-simulator"
version = "0.1.0"
description = ""
authors = ["Andy Goldschmidt <agoldschmidt11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9,<3.13"
numpy = "^1.26.2"
scipy = "^1.11.3"
qiskit = "^0.45.0"
matplotlib = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
