[tool.poetry]
name = "pulse-simulator"
version = "0.1.0"
description = ""
authors = ["Andy Goldschmidt <agoldschmidt11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9,<3.13"
numpy = "^1.26.2"
scipy = "^1.11.3"
qiskit = "^0.45.0"
matplotlib = "^3.8.1"
importlib = "^1.0.4"
qutip = "^4.7.3"
qiskit-dynamics = "^0.4.2"
ipykernel = "^6.26.0"
pylatexenc = "^2.10"
jax = {extras = ["cpu"], version = "^0.4.20"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
